Fix job's code being visible (#421)

--- a/_sass/_jobs.scss
+++ b/_sass/_jobs.scss
@@ -119,6 +119,7 @@
    .whr-title {
      margin: 0px 0px 10px 0px;
     }
+    .whr-info { display: none; }
 /*    .whr-title:focus, .whr-title:active, .whr-title.active {
       margin: 0px 0px 30px 0px;
     }*/
